introduction first pass]

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -34,6 +34,18 @@
  year = {2023}
 }
 
+@inproceedings{Arroyo2022,
+ author = {Arroyo, Alvaro and Scalzo, Bruno and Stanković, Ljubiša and Mandic, Danilo P.},
+ booktitle = {ICASSP 2022 - 2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP43922.2022.9747670},
+ number = {},
+ pages = {5468-5472},
+ title = {Dynamic Portfolio Cuts: A Spectral Approach to Graph-Theoretic Diversification},
+ url = {https://doi.org/10.1109/ICASSP43922.2022.9747670},
+ volume = {},
+ year = {2022}
+}
+
 @article{Atasoy2016,
  author = {Atasoy, Selen and Donnelly, Isaac and Pearson, Joel},
  doi = {10.1038/ncomms10340},
@@ -177,6 +189,13 @@
  year = {1958}
 }
 
+@misc{Bradbury2018,
+ author = {Bradbury, James and Frostig, Roy and Hawkins, Peter and Johnson, Matthew James and Leary, Chris and Maclaurin, Dougal and Necula, George and Paszke, Adam and Vander{P}las, Jake and Wanderman-{M}ilne, Skye and Zhang,Qiao},
+ title = {{JAX}: composable transformations of {P}ython+{N}um{P}y programs},
+ url = {http://github.com/google/jax},
+ year = {2018}
+}
+
 @book{Brenner2008,
  author = {Brenner, Susanne C and Scott, L Ridgway and Scott, L Ridgway},
  publisher = {Springer},
@@ -232,6 +251,41 @@ and Li, Xuelong},
  title = {A Review of Tensors and Tensor Signal Processing},
  url = {https://doi.org/10.1007/978-1-84882-299-3_1},
  year = {2009}
+}
+
+@article{Chakraborty2017,
+ author = {Chakraborty, Pranamesh},
+ journal = {Time Series Workshop, Neural Information Processing Systems},
+ pages = {1--4},
+ title = {Trend {Filtering} in {Network} {Time} {Series} with {Applications} to {Traffic} {Incident} {Detection}},
+ year = {2017}
+}
+
+@article{Chakraborty2019,
+ author = {Chakraborty, Pranamesh and Hegde, Chinmay and Sharma, Anuj},
+ doi = {10.1016/j.trc.2019.05.034},
+ issn = {0968-090X},
+ journal = {Transportation Research Part C},
+ number = {June},
+ pages = {81--99},
+ title = {Data-driven parallelizable traffic incident detection using spatio- temporally denoised robust thresholds},
+ url = {https://doi.org/10.1016/j.trc.2019.05.034},
+ volume = {105},
+ year = {2019}
+}
+
+@article{Chi2022,
+ author = {Chi, Yuan and Jiang, Junzheng and Zhou, Fang and Xu, Shuwen},
+ doi = {10.1007/s00034-021-01930-3},
+ journal = {Circuits,  Systems,  and Signal Processing},
+ month = {January},
+ number = {6},
+ pages = {3624--3641},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {A Distributed Algorithm for Reconstructing Time-Varying Graph Signals},
+ url = {https://doi.org/10.1007/s00034-021-01930-3},
+ volume = {41},
+ year = {2022}
 }
 
 @article{Chong2020,
@@ -338,6 +392,18 @@ observed, modeled, and satellite-derived {PM2.5}},
  url = {https://doi.org/10.1145/355826.355831},
  volume = {5},
  year = {1979}
+}
+
+@inproceedings{Dees2020,
+ author = {Dees, Bruno Scalzo and Stanković, Ljubiša and Constantinides, Anthony G. and Mandic, Danilo P.},
+ booktitle = {ICASSP 2020 - 2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP40776.2020.9054371},
+ number = {},
+ pages = {8454-8458},
+ title = {Portfolio Cuts: A Graph-Theoretic Framework to Diversification},
+ url = {https://doi.org/10.1109/ICASSP40776.2020.9054371},
+ volume = {},
+ year = {2020}
 }
 
 @book{Demmel1997,
@@ -649,6 +715,37 @@ Travis E. Oliphant},
  year = {2005}
 }
 
+@article{Hasanzadeh2017,
+ author = {Hasanzadeh, Arman and Liu, Xi and Duffield, Nick G. and Narayanan, Krishna R. and Chigoy, Byron T},
+ journal = {arXiv: Signal Processing},
+ title = {A Graph Signal Processing Approach For Real-Time Traffic Prediction In Transportation Networks},
+ year = {2017}
+}
+
+@inproceedings{Hasanzadeh2019,
+ author = {Hasanzadeh, Arman and Liu, Xi and Duffield, Nick and Narayanan, Krishna R.},
+ booktitle = {2019 IEEE International Conference on Big Data (Big Data)},
+ doi = {10.1109/BigData47090.2019.9005965},
+ number = {},
+ pages = {3779-3788},
+ title = {Piecewise Stationary Modeling of Random Processes Over Graphs With an Application to Traffic Prediction},
+ url = {https://doi.org/10.1109/BigData47090.2019.9005965},
+ volume = {},
+ year = {2019}
+}
+
+@article{He2018,
+ author = {He, Kanghang and Stankovic, Lina and Liao, Jing and Stankovic, Vladimir},
+ doi = {10.1109/TSG.2016.2598872},
+ journal = {IEEE Transactions on Smart Grid},
+ number = {3},
+ pages = {1739-1747},
+ title = {Non-Intrusive Load Disaggregation Using Graph Signal Processing},
+ url = {https://doi.org/10.1109/TSG.2016.2598872},
+ volume = {9},
+ year = {2018}
+}
+
 @article{Hestenes1952,
  author = {Hestenes, Magnus R. and Stiefel, Eduard},
  doi = {10.6028/JRES.049.044},
@@ -747,6 +844,18 @@ Travis E. Oliphant},
  primaryclass = {eess.SP},
  title = {Graph Filters for Signal Processing and Machine Learning on Graphs},
  year = {2022}
+}
+
+@inproceedings{Itani2021,
+ author = {Itani, Sarah and Thanou, Dorina},
+ booktitle = {2020 28th European Signal Processing Conference (EUSIPCO)},
+ doi = {10.23919/Eusipco47968.2020.9287486},
+ number = {},
+ pages = {1180-1184},
+ title = {A Graph Signal Processing Framework for the Classification of Temporal Brain Data},
+ url = {https://doi.org/10.23919/Eusipco47968.2020.9287486},
+ volume = {},
+ year = {2021}
 }
 
 @article{Jablonski2017,
@@ -887,6 +996,17 @@ https://doi.org/10.1137/07070111X},
  year = {2002}
 }
 
+@article{Kriege2020,
+ author = {Kriege, Nils M and Johansson, Fredrik D and Morris, Christopher},
+ journal = {Applied Network Science},
+ number = {1},
+ pages = {1--42},
+ publisher = {SpringerOpen},
+ title = {A survey on graph kernels},
+ volume = {5},
+ year = {2020}
+}
+
 @book{Kroonenberg2008,
  address = {Hoboken, NJ},
  author = {Kroonenberg, Pieter M},
@@ -1009,6 +1129,22 @@ https://doi.org/10.1137/07070111X},
  year = {1980}
 }
 
+@inbook{Marti2021,
+ address = {Cham},
+ author = {Marti, Gautier
+and Nielsen, Frank
+and Bi{\'{n}}kowski, Miko{\l}aj
+and Donnat, Philippe},
+ booktitle = {Progress in Information Geometry: Theory and Applications},
+ doi = {10.1007/978-3-030-65459-7_10},
+ isbn = {978-3-030-65459-7},
+ pages = {245--274},
+ publisher = {Springer International Publishing},
+ title = {A Review of Two Decades of Correlations, Hierarchies, Networks and Clustering in Financial Markets},
+ url = {https://doi.org/10.1007/978-3-030-65459-7_10},
+ year = {2021}
+}
+
 @inproceedings{Martin2001,
  author = {Martin, D. and Fowlkes, C. and Tal, D. and Malik, J.},
  booktitle = {Proc. 8th Int'l Conf. Computer Vision},
@@ -1065,6 +1201,18 @@ Measuring Ecological Statistics},
  url = {https://doi.org/10.1109/TPAMI.2021.3059968},
  volume = {44},
  year = {2022}
+}
+
+@inproceedings{Mohan2014,
+ author = {Mohan, Dhanya Menoth and Asif, Muhammad Tayyab and Mitrovic, Nikola and Dauwels, Justin and Jaillet, Patrick},
+ booktitle = {17th International IEEE Conference on Intelligent Transportation Systems (ITSC)},
+ doi = {10.1109/ITSC.2014.6957939},
+ number = {},
+ pages = {1707-1712},
+ title = {Wavelets on graphs with application to transportation networks},
+ url = {https://doi.org/10.1109/ITSC.2014.6957939},
+ volume = {},
+ year = {2014}
 }
 
 @book{Murphy2012,
@@ -1218,6 +1366,18 @@ green bond instrument returns},
  year = {2017}
 }
 
+@article{Ramakrishna2021,
+ author = {Ramakrishna, Raksha and Scaglione, Anna},
+ doi = {10.1109/TSP.2021.3075145},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {},
+ pages = {2725-2739},
+ title = {Grid-Graph Signal Processing (Grid-GSP): A Graph Signal Processing Framework for the Power Grid},
+ url = {https://doi.org/10.1109/TSP.2021.3075145},
+ volume = {69},
+ year = {2021}
+}
+
 @article{Ramirez2021,
  author = {Ramirez, David and Marques, Antonio G. and Segarra, Santiago},
  doi = {https://doi.org/10.1016/j.sigpro.2021.108180},
@@ -1258,6 +1418,19 @@ green bond instrument returns},
  title = {Manifolds, Tensors, and Forms: An Introduction for Mathematicians and Physicists},
  url = {https://books.google.co.uk/books?id=uJWGAgAAQBAJ},
  year = {2013}
+}
+
+@article{Ricaud2019,
+ author = {Ricaud, Benjamin and Borgnat, Pierre and Tremblay, Nicolas and Goncalves, Paulo and Vandergheynst, Pierre},
+ doi = {https://doi.org/10.1016/j.crhy.2019.08.003},
+ issn = {1631-0705},
+ journal = {Comptes Rendus Physique},
+ number = {5},
+ pages = {474-488},
+ title = {Fourier could be a data scientist: From graph Fourier transform to signal processing on graphs},
+ url = {https://doi.org/https://doi.org/10.1016/j.crhy.2019.08.003},
+ volume = {20},
+ year = {2019}
 }
 
 @book{Robert1999,
@@ -1458,6 +1631,15 @@ and Warmuth, Manfred K.},
  year = {2020}
 }
 
+@misc{Susnjara2015,
+ archiveprefix = {arXiv},
+ author = {Susnjara, Ana and Perraudin, Nathanael and Kressner, Daniel and Vandergheynst, Pierre},
+ eprint = {1509.04537},
+ primaryclass = {math.NA},
+ title = {Accelerated filtering on graphs using Lanczos method},
+ year = {2015}
+}
+
 @article{Takeda2007,
  author = {Takeda, Hiroyuki and Farsiu, Sina and Milanfar, Peyman},
  doi = {10.1109/TIP.2006.888330},
@@ -1481,6 +1663,18 @@ and Warmuth, Manfred K.},
  url = {https://doi.org/https://doi.org/10.1002/nla.779},
  volume = {19},
  year = {2012}
+}
+
+@article{Tay2021,
+ author = {Tay, David B.},
+ doi = {https://doi.org/10.1016/j.sigpro.2021.108302},
+ issn = {0165-1684},
+ journal = {Signal Processing},
+ pages = {108302},
+ title = {Sensor network data denoising via recursive graph median filters},
+ url = {https://doi.org/https://doi.org/10.1016/j.sigpro.2021.108302},
+ volume = {189},
+ year = {2021}
 }
 
 @book{Tolimieri2013,
@@ -1531,6 +1725,15 @@ and Warmuth, Manfred K.},
  year = {2020}
 }
 
+@misc{Vinicius2020,
+ archiveprefix = {arXiv},
+ author = {Vinicius, Jose de Miranda Cardoso and Ying, Jiaxi and Palomar, Daniel Perez},
+ eprint = {2012.15410},
+ primaryclass = {cs.LG},
+ title = {Algorithms for Learning Graphs in Financial Markets},
+ year = {2020}
+}
+
 @article{Vono2022,
  author = {Vono, Maxime and Dobigeon, Nicolas and Chainais, Pierre},
  doi = {10.1137/20M1371026},
@@ -1543,6 +1746,45 @@ and Warmuth, Manfred K.},
  year = {2022}
 }
 
+@inproceedings{Wagner2005,
+ author = {Wagner, R. and Hyeokho Choi and Baraniuk, R. and Delouille, V.},
+ booktitle = {IEEE/SP 13th Workshop on Statistical Signal Processing, 2005},
+ doi = {10.1109/SSP.2005.1628777},
+ number = {},
+ pages = {1196-1201},
+ title = {Distributed wavelet transform for irregular sensor network grids},
+ url = {https://doi.org/10.1109/SSP.2005.1628777},
+ volume = {},
+ year = {2005}
+}
+
+@article{Wang2015,
+ author = {Wang, Xiaohan and Wang, Mengdi and Gu, Yuantao},
+ doi = {10.1109/JSTSP.2015.2403799},
+ journal = {IEEE Journal of Selected Topics in Signal Processing},
+ number = {4},
+ pages = {728-740},
+ title = {A Distributed Tracking Algorithm for Reconstruction of Graph Signals},
+ url = {https://doi.org/10.1109/JSTSP.2015.2403799},
+ volume = {9},
+ year = {2015}
+}
+
+@article{Wang2016,
+ author = {Wang, Yu-Xiang and Sharpnack, James and Smola, Alexander J. and Tibshirani, Ryan J.},
+ issn = {1532-4435},
+ issue_date = {January 2016},
+ journal = {J. Mach. Learn. Res.},
+ month = {jan},
+ number = {1},
+ numpages = {41},
+ pages = {3651–3691},
+ publisher = {JMLR.org},
+ title = {Trend Filtering on Graphs},
+ volume = {17},
+ year = {2016}
+}
+
 @article{Wang2022,
  author = {Wang, Yuanbo and Ahsan, Unaiza and Li, Hanyan and Hagen, Matthew },
  doi = {10.1561/0600000097},
@@ -1553,6 +1795,27 @@ and Warmuth, Manfred K.},
  title = {A Comprehensive Review of Modern Object Segmentation Approaches},
  url = {https://doi.org/10.1561/0600000097},
  volume = {13},
+ year = {2022}
+}
+
+@inproceedings{Wang2022b,
+ author = {Wang, Yi and Zhao, Bochao and Li, Xuhao and Luan, Wenpeng and Liu, Bo},
+ booktitle = {2022 7th Asia Conference on Power and Electrical Engineering (ACPEE)},
+ doi = {10.1109/ACPEE53904.2022.9783805},
+ number = {},
+ pages = {208-212},
+ title = {Abnormal Battery Identification via Graph Signal Processing Method},
+ url = {https://doi.org/10.1109/ACPEE53904.2022.9783805},
+ volume = {},
+ year = {2022}
+}
+
+@misc{Wang2022c,
+ archiveprefix = {arXiv},
+ author = {Wang, Jianian and Zhang, Sheng and Xiao, Yanghua and Song, Rui},
+ eprint = {2111.15367},
+ primaryclass = {q-fin.ST},
+ title = {A Review on Graph Neural Network Methods in Financial Applications},
  year = {2022}
 }
 
@@ -1570,6 +1833,30 @@ and Warmuth, Manfred K.},
  title = {A Programmatic Introduction to Neo4j},
  url = {https://doi.org/10.1145/2384716.2384777},
  year = {2012}
+}
+
+@article{Xiu2022,
+ author = {Xiu, Cong and Sun, Yichen and Peng, Qiyuan},
+ doi = {10.1016/j.jrtpm.2022.100342},
+ issn = {2210-9706},
+ journal = {Journal of Rail Transport Planning \& Management},
+ pages = {100342},
+ title = {Modelling traffic as multi-graph signals: Using domain knowledge to enhance the network-level passenger flow prediction in metro systems},
+ url = {https://doi.org/10.1016/j.jrtpm.2022.100342},
+ volume = {24},
+ year = {2022}
+}
+
+@article{Ying2022,
+ author = {Ying, Wang and Rui, Xu and Xiaoyang, Ma and Qiang, Fu and Jinshuai, Zhao and Runze, Zhou},
+ doi = {10.1109/TPWRD.2021.3135075},
+ journal = {IEEE Transactions on Power Delivery},
+ number = {5},
+ pages = {3688-3697},
+ title = {Spectral Graph Theory-Based Recovery Method for Missing Harmonic Data},
+ url = {https://doi.org/10.1109/TPWRD.2021.3135075},
+ volume = {37},
+ year = {2022}
 }
 
 @article{Zhang2017,
@@ -1622,6 +1909,17 @@ multilayer complex systems},
  year = {2022}
 }
 
+@article{Zhang2023,
+ author = {Zhang, Shengen and Ma, Xu and Fang, Zhen and Pan, Huifeng and Yang, Guangbing and Arce, Gonzalo R.},
+ doi = {10.1007/s10489-023-04563-y},
+ journal = {Applied Intelligence},
+ month = {May},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Financial time series forecasting based on momentum-driven graph signal processing},
+ url = {https://doi.org/10.1007/s10489-023-04563-y},
+ year = {2023}
+}
+
 @article{Zhao2023,
  author = {Zhao, Xusheng and Dai, Qiong and Wu, Jia and Peng, Hao and Liu, Mingsheng and Bai, Xu and Tan, Jianlong and Wang, Senzhang and Yu, Philip S.},
  doi = {10.1109/TKDE.2022.3142179},
@@ -1631,6 +1929,30 @@ multilayer complex systems},
  title = {Multi-View Tensor Graph Neural Networks Through Reinforced Aggregation},
  url = {https://doi.org/10.1109/TKDE.2022.3142179},
  volume = {35},
+ year = {2023}
+}
+
+@article{Zheng2022,
+ author = {Zheng, Diwen and Ma, Xiaoyang and Wang, Ying and Wang, Yang and Luo, Hong},
+ doi = {10.1109/TPWRD.2021.3112287},
+ journal = {IEEE Transactions on Power Delivery},
+ number = {4},
+ pages = {2562-2570},
+ title = {Non-Intrusive Load Monitoring Based on the Graph Least Squares Reconstruction Method},
+ url = {https://doi.org/10.1109/TPWRD.2021.3112287},
+ volume = {37},
+ year = {2022}
+}
+
+@article{Zhi2023,
+ author = {Zhi, Yin-Cong and Ng, Yin Cheng and Dong, Xiaowen},
+ doi = {10.1109/TSIPN.2023.3265160},
+ journal = {IEEE Transactions on Signal and Information Processing over Networks},
+ number = {},
+ pages = {304-314},
+ title = {Gaussian Processes on Graphs Via Spectral Kernel Learning},
+ url = {https://doi.org/10.1109/TSIPN.2023.3265160},
+ volume = {9},
  year = {2023}
 }
 
@@ -1644,6 +1966,18 @@ multilayer complex systems},
  url = {https://doi.org/https://doi.org/10.1016/j.aiopen.2021.01.001},
  volume = {1},
  year = {2020}
+}
+
+@article{Zhou2022,
+ author = {Zhou, Xiao and Liu, Shuming and Xu, Weirong and Xin, Kunlun and Wu, Yipeng and Meng, Fanlin},
+ doi = {10.1016/j.watres.2022.118416},
+ issn = {0043-1354},
+ journal = {Water Research},
+ pages = {118416},
+ title = {Bridging hydraulics and graph signal processing: A new perspective to estimate water distribution network pressures},
+ url = {https://doi.org/10.1016/j.watres.2022.118416},
+ volume = {217},
+ year = {2022}
 }
 
 @inproceedings{Zhu2003,
@@ -1670,69 +2004,3 @@ multilayer complex systems},
  volume = {},
  year = {2012}
 }
-
-
-
-@article{chakraborty_data-driven_2019,
-	title = {Data-driven parallelizable traffic incident detection using spatio- temporally denoised robust thresholds},
-	volume = {105},
-	issn = {0968-090X},
-	url = {https://doi.org/10.1016/j.trc.2019.05.034},
-	doi = {10.1016/j.trc.2019.05.034},
-	number = {June},
-	journal = {Transportation Research Part C},
-	author = {Chakraborty, Pranamesh and Hegde, Chinmay and Sharma, Anuj},
-	year = {2019},
-	note = {Publisher: Elsevier},
-	keywords = {Total variation, Bilateral filter, freeway incident detection, Freeway incident detection, MapReduce, Threshold denoising},
-	pages = {81--99},
-	file = {PDF:/home/ed/Zotero/storage/K3FUIUTF/Chakraborty, Hegde, Sharma - 2019 - Data-driven parallelizable traffic incident detection using spatio- temporally denoised robust thres.pdf:application/pdf},
-}
-
-
-@article{chakraborty_trend_2017,
-	title = {Trend {Filtering} in {Network} {Time} {Series} with {Applications} to {Traffic} {Incident} {Detection}},
-	number = {Nips},
-	author = {Chakraborty, Pranamesh},
-	year = {2017},
-	pages = {1--4},
-	file = {PDF:/home/ed/Zotero/storage/NA964DLM/Chakraborty - 2017 - Trend Filtering in Network Time Series with Applications to Traffic Incident Detection.pdf:application/pdf},
-}
-
-@article{XIU2022100342,
-title = {Modelling traffic as multi-graph signals: Using domain knowledge to enhance the network-level passenger flow prediction in metro systems},
-journal = {Journal of Rail Transport Planning & Management},
-volume = {24},
-pages = {100342},
-year = {2022},
-issn = {2210-9706},
-doi = {10.1016/j.jrtpm.2022.100342},
-url = {https://www.sciencedirect.com/science/article/pii/S2210970622000427},
-author = {Xiu, Cong and Sun, Yichen and Peng, Qiyuan},
-keywords = {Traffic forecasting, Deep learning, Multi-graph convolution wavelet network, Spatial-temporal dependence, Metro domain knowledge, Interpretability},
-}
-
-@article{Hasanzadeh2017AGS,
-  title={A Graph Signal Processing Approach For Real-Time Traffic Prediction In Transportation Networks},
-  author={Hasanzadeh, Arman and Liu, Xi and Duffield, Nick G. and Narayanan, Krishna R. and Chigoy, Byron T},
-  journal={arXiv: Signal Processing},
-  year={2017}
-}
-
-@INPROCEEDINGS{9005965,
-
-  author={Hasanzadeh, Arman and Liu, Xi and Duffield, Nick and Narayanan, Krishna R.},
-
-  booktitle={2019 IEEE International Conference on Big Data (Big Data)}, 
-
-  title={Piecewise Stationary Modeling of Random Processes Over Graphs With an Application to Traffic Prediction}, 
-
-  year={2019},
-
-  volume={},
-
-  number={},
-
-  pages={3779-3788},
-
-  doi={10.1109/BigData47090.2019.9005965}}
