started lit review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -143,6 +143,18 @@
  year = {2007}
 }
 
+@inproceedings{Belkin2002,
+ address = {Cambridge, MA, USA},
+ author = {Belkin, Mikhail and Niyogi, Partha},
+ booktitle = {Proceedings of the 15th International Conference on Neural Information Processing Systems},
+ numpages = {8},
+ pages = {953–960},
+ publisher = {MIT Press},
+ series = {NIPS'02},
+ title = {Using Manifold Structure for Partially Labelled Classification},
+ year = {2002}
+}
+
 @article{Belkin2003,
  author = {Belkin, Mikhail and Niyogi, Partha},
  doi = {10.1162/089976603321780317},
@@ -153,6 +165,21 @@
  url = {https://doi.org/10.1162/089976603321780317},
  volume = {15},
  year = {2003}
+}
+
+@inproceedings{Belkin2004,
+ address = {Berlin, Heidelberg},
+ author = {Belkin, Mikhail
+and Matveeva, Irina
+and Niyogi, Partha},
+ booktitle = {Learning Theory},
+ editor = {Shawe-Taylor, John
+and Singer, Yoram},
+ isbn = {978-3-540-27819-1},
+ pages = {624--638},
+ publisher = {Springer Berlin Heidelberg},
+ title = {Regularization and Semi-supervised Learning on Large Graphs},
+ year = {2004}
 }
 
 @book{Bhatia1997,
@@ -274,6 +301,20 @@ and Li, Xuelong},
  year = {2019}
 }
 
+@inbook{Cheeger1971,
+ address = {Princeton},
+ author = {Cheeger, Jeff},
+ booktitle = {Problems in Analysis},
+ doi = {doi:10.1515/9781400869312-013},
+ isbn = {978-1-4008-6931-2},
+ lastchecked = {2023-07-11},
+ pages = {195--200},
+ publisher = {Princeton University Press},
+ title = {A Lower Bound for the Smallest Eigenvalue of the Laplacian},
+ url = {https://doi.org/doi:10.1515/9781400869312-013},
+ year = {1971}
+}
+
 @article{Chi2022,
  author = {Chi, Yuan and Jiang, Junzheng and Zhou, Fang and Xu, Shuwen},
  doi = {10.1007/s00034-021-01930-3},
@@ -298,6 +339,17 @@ and Li, Xuelong},
  url = {https://doi.org/https://doi.org/10.1016/j.neucom.2019.12.130},
  volume = {408},
  year = {2020}
+}
+
+@book{Chung1997,
+ author = {Chung, F.R.K.},
+ isbn = {9780821803158},
+ lccn = {96045112},
+ publisher = {American Mathematical Society},
+ series = {Conference Board of Mathematical Sciences},
+ title = {Spectral Graph Theory},
+ url = {https://books.google.co.uk/books?id=4IK8DgAAQBAJ},
+ year = {1997}
 }
 
 @article{Chung2005,
@@ -346,6 +398,17 @@ observed, modeled, and satellite-derived {PM2.5}},
  year = {2020}
 }
 
+@article{Collatz1957,
+ author = {Collatz, Lothar and Sinogowitz, Ulrich},
+ doi = {10.1007/BF02941924},
+ journal = {Abhandlungen aus dem Mathematischen Seminar der Universit{\"a}t Hamburg},
+ pages = {63-77},
+ title = {Spektren endlicher grafen},
+ url = {https://doi.org/10.1007/BF02941924},
+ volume = {21},
+ year = {1957}
+}
+
 @article{Colonnese2021,
  author = {Colonnese, Stefania and Petti, Manuela and Farina, Lorenzo and Scarano, Gaetano and Cuomo, Francesca},
  doi = {10.1109/ACCESS.2021.3119569},
@@ -367,6 +430,17 @@ observed, modeled, and satellite-derived {PM2.5}},
  url = {https://doi.org/10.1090/S0025-5718-1965-0178586-1},
  volume = {19},
  year = {1965}
+}
+
+@book{Cvetkovic1980,
+ author = {Cvetkovic, D.M. and Doob, M. and Sachs, H.},
+ isbn = {9780121951504},
+ lccn = {83178872},
+ publisher = {Academic Press},
+ series = {Pure and applied mathematics : a series of monographs and textbooks},
+ title = {Spectra of Graphs: Theory and Application},
+ url = {https://books.google.co.uk/books?id=4u7uAAAAMAAJ},
+ year = {1980}
 }
 
 @article{Daubechies2010,
@@ -441,6 +515,32 @@ and Frossard, Pascal},
  title = {Multiscale event detection in social media},
  volume = {29},
  year = {2015}
+}
+
+@article{Donoho2003,
+ author = {Donoho, David L.  and Grimes, Carrie},
+ doi = {10.1073/pnas.1031596100},
+ eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.1031596100},
+ journal = {Proceedings of the National Academy of Sciences},
+ number = {10},
+ pages = {5591-5596},
+ title = {Hessian eigenmaps: Locally linear embedding techniques for high-dimensional data},
+ url = {https://doi.org/10.1073/pnas.1031596100},
+ volume = {100},
+ year = {2003}
+}
+
+@article{Duhamel1990,
+ author = {Duhamel, P. and Vetterli, M.},
+ doi = {10.1016/0165-1684(90)90158-U},
+ issn = {0165-1684},
+ journal = {Signal Processing},
+ number = {4},
+ pages = {259-299},
+ title = {Fast fourier transforms: A tutorial review and a state of the art},
+ url = {https://doi.org/10.1016/0165-1684(90)90158-U},
+ volume = {19},
+ year = {1990}
 }
 
 @article{Elias2022,
@@ -757,6 +857,21 @@ Travis E. Oliphant},
  year = {1952}
 }
 
+@article{Hoffman1969,
+ author = {Hoffman, Alan J.},
+ doi = {10.1137/0117062},
+ eprint = { 
+
+https://doi.org/10.1137/0117062},
+ journal = {SIAM Journal on Applied Mathematics},
+ number = {4},
+ pages = {664-671},
+ title = {The Change in the Least Eigenvalued of the Adjacency Matrix of a Graph Under Imbedding},
+ url = {https://doi.org/10.1137/0117062},
+ volume = {17},
+ year = {1969}
+}
+
 @inproceedings{Holmes2008,
  author = {Holmes, Dawn E. and Jain, Lakhmi C.},
  booktitle = {Innovations in Bayesian Networks},
@@ -787,6 +902,20 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1109/JSTSP.2016.2600859},
  volume = {10},
  year = {2016}
+}
+
+@article{Huckel1931,
+ author = {Huckel, Erich},
+ doi = {10.1007/bf01339530},
+ journal = {Zeitschrift für Physik},
+ month = {March},
+ number = {3-4},
+ pages = {204--286},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Quantentheoretische Beiträge zum Benzolproblem},
+ url = {https://doi.org/10.1007/bf01339530},
+ volume = {70},
+ year = {1931}
 }
 
 @book{Hull2009,
@@ -1354,6 +1483,30 @@ green bond instrument returns},
  year = {2003}
 }
 
+@misc{Puschel2006,
+ author = {Puschel, Markus and Moura, José M. F.},
+ copyright = {arXiv.org perpetual,  non-exclusive license},
+ doi = {10.48550/ARXIV.CS/0612077},
+ publisher = {arXiv},
+ title = {Algebraic Signal Processing Theory},
+ url = {https://doi.org/10.48550/ARXIV.CS/0612077},
+ year = {2006}
+}
+
+@article{Puschel2008,
+ author = {Puschel, Markus and Moura, Jos{\'e} M. F.},
+ doi = {10.1109/tsp.2008.925261},
+ journal = {{IEEE} Transactions on Signal Processing},
+ month = {August},
+ number = {8},
+ pages = {3572--3585},
+ publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+ title = {Algebraic Signal Processing Theory: Foundation and 1-D Time},
+ url = {https://doi.org/10.1109/tsp.2008.925261},
+ volume = {56},
+ year = {2008}
+}
+
 @article{Qiu2017,
  author = {Qiu, Kai and Mao, Xianghui and Shen, Xinyue and Wang, Xiaohan and Li, Tiejian and Gu, Yuantao},
  doi = {10.1109/JSTSP.2017.2726969},
@@ -1364,6 +1517,17 @@ green bond instrument returns},
  url = {https://doi.org/10.1109/JSTSP.2017.2726969},
  volume = {11},
  year = {2017}
+}
+
+@book{Rabiner1975,
+ author = {Rabiner, L.R. and Gold, B.},
+ isbn = {9780139141010},
+ lccn = {74022332},
+ publisher = {Prentice-Hall},
+ series = {Prentice-Hall signal processing series},
+ title = {Theory and Application of Digital Signal Processing},
+ url = {https://books.google.co.uk/books?id=iAxTAAAAMAAJ},
+ year = {1975}
 }
 
 @article{Ramakrishna2021,
@@ -1452,6 +1616,19 @@ green bond instrument returns},
  title = {On Direct Product Matrices},
  url = {https://doi.org/10.2307/3609497},
  year = {1934}
+}
+
+@article{Roweis2000,
+ author = {Roweis, Sam T.  and Saul, Lawrence K. },
+ doi = {10.1126/science.290.5500.2323},
+ eprint = {https://www.science.org/doi/pdf/10.1126/science.290.5500.2323},
+ journal = {Science},
+ number = {5500},
+ pages = {2323-2326},
+ title = {Nonlinear Dimensionality Reduction by Locally Linear Embedding},
+ url = {https://doi.org/10.1126/science.290.5500.2323},
+ volume = {290},
+ year = {2000}
 }
 
 @article{Saad1986,
@@ -1956,6 +2133,16 @@ multilayer complex systems},
  year = {2023}
 }
 
+@inproceedings{Zhou2004,
+ author = {Zhou, Denny and Schölkopf, Bernhard},
+ booktitle = {ICML Workshop on Statistical Relational Learning and Its Connections to Other Fields},
+ edition = {ICML Workshop on Statistical Relational Learning and Its Connections to Other Fields},
+ month = {January},
+ title = {A Regularization Framework for Learning from Graph Data},
+ url = {https://www.microsoft.com/en-us/research/publication/regularization-framework-learning-graph-data/},
+ year = {2004}
+}
+
 @article{Zhou2020,
  author = {Zhou, Jie and Cui, Ganqu and Hu, Shengding and Zhang, Zhengyan and Yang, Cheng and Liu, Zhiyuan and Wang, Lifeng and Li, Changcheng and Sun, Maosong},
  doi = {https://doi.org/10.1016/j.aiopen.2021.01.001},
@@ -2004,3 +2191,8 @@ multilayer complex systems},
  volume = {},
  year = {2012}
 }
+
+
+
+  
+
